--- a/packages/website/src/components/PaletteColorViewer/PaletteColorViewer.module.scss
+++ b/packages/website/src/components/PaletteColorViewer/PaletteColorViewer.module.scss
@@ -1,7 +1,9 @@
+@use "@neetly/palette";
+
 .container {
   width: 2rem;
   height: 2rem;
   border-radius: 0.25rem;
   background-color: var(--color);
-  box-shadow: 0 0 0 0.25px #000;
+  box-shadow: 0 0 0 1px palette.$neutral-100;
 }
