--- a/packages/website/src/components/PaletteViewer/PaletteViewer.module.scss
+++ b/packages/website/src/components/PaletteViewer/PaletteViewer.module.scss
@@ -1,8 +1,9 @@
+@use "@neetly/palette";
+
 .container {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  margin: 1rem;
 }
 
 .group {
@@ -12,12 +13,14 @@
 }
 
 .groupName {
-  font-size: 0.75rem;
+  font-size: 0.8125rem;
   font-weight: 600;
   line-height: 1rem;
+  color: palette.$neutral-variant-800;
 }
 
 .groupColors {
   display: flex;
+  align-items: center;
   gap: 0.25rem;
 }
