--- a/packages/website/src/index.scss
+++ b/packages/website/src/index.scss
@@ -1,8 +1,12 @@
+@use "@neetly/palette";
+
 html {
   font-family: "Fieldwork", sans-serif;
   font-size: 16px;
   line-height: 1.5;
   overflow-wrap: break-word;
+  color: palette.$neutral-800;
+  background-color: #fff;
 }
 
 body {
