--- a/packages/website/src/components/PaletteColorViewer/PaletteColorViewer.module.scss
+++ b/packages/website/src/components/PaletteColorViewer/PaletteColorViewer.module.scss
@@ -5,5 +5,5 @@
   height: 2rem;
   border-radius: 0.25rem;
   background-color: var(--color);
-  box-shadow: 0 0 0 1px palette.$neutral-100;
+  box-shadow: 0 0 0 1px palette.$neutral--100;
 }
