--- a/packages/website/src/components/PaletteViewer/PaletteViewer.module.scss
+++ b/packages/website/src/components/PaletteViewer/PaletteViewer.module.scss
@@ -16,7 +16,7 @@
   font-size: 0.8125rem;
   font-weight: 600;
   line-height: 1rem;
-  color: palette.$neutral-variant-800;
+  color: palette.$neutral-variant--800;
 }
 
 .groupColors {
