--- a/packages/website/src/index.scss
+++ b/packages/website/src/index.scss
@@ -5,7 +5,7 @@ html {
   font-size: 16px;
   line-height: 1.5;
   overflow-wrap: break-word;
-  color: palette.$neutral-800;
+  color: palette.$neutral--800;
   background-color: #fff;
 }
 
