--- a/packages/website/src/index.scss
+++ b/packages/website/src/index.scss
@@ -1,7 +1,8 @@
 @use "@neetly/palette";
+@use "./styles/index.scss" as *;
 
 html {
-  font-family: "Fieldwork", sans-serif;
+  font-family: $font-ui;
   font-size: 16px;
   line-height: 1.5;
   overflow-wrap: break-word;
