--- a/packages/website/src/components/AppHeader/AppHeader.module.scss
+++ b/packages/website/src/components/AppHeader/AppHeader.module.scss
@@ -1,49 +1,25 @@
 @use "@neetly/palette";
 
 .header {
+  position: sticky;
+  z-index: 100;
+  top: 0;
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  gap: 1.5rem;
-  padding: 1rem 2rem;
+  height: 4rem;
+  padding: 0 2rem;
 }
 
 .logoLink {
-  margin: -0.25rem -0.5rem;
-  padding: 0.25rem 0.5rem;
+  margin: -0.5rem -1rem;
+  padding: 0.5rem 1rem;
+  border-radius: 1.25rem;
   text-decoration: none;
   color: palette.$red--600;
 }
 
 .logo {
   margin: 0;
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
-.nav {
-  display: flex;
-  align-items: center;
-  gap: 1.5rem;
-}
-
-.navLink {
-  margin: -0.25rem -0.5rem;
-  padding: 0.25rem 0.5rem;
-  font-size: 0.9375rem;
+  font-size: 1.25rem;
   line-height: 1.5rem;
-  text-decoration: none;
-  color: palette.$neutral-variant--600;
-  transition: color 250ms;
-
-  @media (hover: hover) {
-    &:hover {
-      color: palette.$neutral-variant--800;
-    }
-  }
-
-  &.active {
-    text-decoration: underline;
-    color: palette.$neutral-variant--800;
-  }
 }
