--- a/packages/website/src/components/AppHeader/AppHeader.module.scss
+++ b/packages/website/src/components/AppHeader/AppHeader.module.scss
@@ -8,6 +8,7 @@
   align-items: center;
   height: 4rem;
   padding: 0 2rem;
+  background-color: palette.$neutral--10;
 }
 
 .logoLink {
@@ -15,7 +16,14 @@
   padding: 0.5rem 1rem;
   border-radius: 1.25rem;
   text-decoration: none;
-  color: palette.$red--600;
+  color: palette.$primary--600;
+  transition: background-color 250ms;
+
+  @media (hover: hover) {
+    &:hover {
+      background-color: palette.$neutral--50;
+    }
+  }
 }
 
 .logo {
