--- a/packages/website/src/index.scss
+++ b/packages/website/src/index.scss
@@ -7,7 +7,7 @@ html {
   line-height: 1.5;
   overflow-wrap: break-word;
   color: palette.$neutral--800;
-  background-color: #fff;
+  background-color: palette.$neutral--10;
 }
 
 body {
