--- a/packages/website/src/components/PaletteViewer/PaletteViewer.module.scss
+++ b/packages/website/src/components/PaletteViewer/PaletteViewer.module.scss
@@ -24,3 +24,14 @@
   flex-wrap: wrap;
   gap: 0.25rem;
 }
+
+.color {
+  all: unset;
+  cursor: pointer;
+
+  width: 2rem;
+  height: 2rem;
+  border-radius: 0.25rem;
+  background-color: var(--color);
+  box-shadow: inset 0 0 0 1px palette.$neutral--100;
+}
