--- a/packages/website/src/index.scss
+++ b/packages/website/src/index.scss
@@ -4,6 +4,7 @@
 @use "./styles/index.scss" as *;
 
 html {
+  scroll-padding-top: 4rem;
   font-family: $font-ui;
   font-size: 16px;
   line-height: 1.5;
