--- a/packages/website/src/components/PaletteViewer/PaletteViewer.module.scss
+++ b/packages/website/src/components/PaletteViewer/PaletteViewer.module.scss
@@ -47,6 +47,7 @@
 .colorTone {
   font-size: 0.625rem;
   font-weight: 600;
+  line-height: 0.75rem;
   text-align: center;
   color: palette.$neutral-variant--600;
 }
