--- a/packages/website/src/components/PaletteViewer/PaletteViewer.module.scss
+++ b/packages/website/src/components/PaletteViewer/PaletteViewer.module.scss
@@ -1,3 +1,5 @@
+@use "sass:color";
+
 @use "@neetly/palette";
 @use "../../styles/index.scss" as *;
 
@@ -41,7 +43,7 @@
   height: 2rem;
   border-radius: 0.25rem;
   background-color: var(--color);
-  box-shadow: inset 0 0 0 1px palette.$neutral--100;
+  box-shadow: inset 0 0 0 1px color.change(#000, $alpha: 0.08);
 }
 
 .colorTone {
