--- a/packages/website/src/components/PaletteViewer/PaletteViewer.module.scss
+++ b/packages/website/src/components/PaletteViewer/PaletteViewer.module.scss
@@ -44,6 +44,13 @@
   border-radius: 0.25rem;
   background-color: var(--color);
   box-shadow: inset 0 0 0 1px color.change(#000, $alpha: 0.08);
+  transition: box-shadow 250ms;
+
+  @media (hover: hover) {
+    &:hover {
+      box-shadow: inset 0 0 0 1px color.change(#000, $alpha: 0.16);
+    }
+  }
 }
 
 .colorTone {
