--- a/packages/website/src/components/IconsViewer/IconsViewer.module.scss
+++ b/packages/website/src/components/IconsViewer/IconsViewer.module.scss
@@ -3,20 +3,19 @@
 .container {
   display: flex;
   flex-wrap: wrap;
-  gap: 1rem 0.25rem;
+  gap: 0.5rem;
 }
 
 .icon {
   display: flex;
-  flex-direction: column;
-  gap: 0.25rem;
-  width: 6rem;
+  align-items: center;
+  gap: 0.5rem;
+  width: 12rem;
 }
 
 .iconPreview {
-  width: 3rem;
-  height: 3rem;
-  margin: 0 auto;
+  width: 1.5rem;
+  height: 1.5rem;
   fill: palette.$neutral-variant--800;
 }
 
@@ -24,6 +23,5 @@
   font-size: 0.75rem;
   font-weight: 600;
   line-height: 1rem;
-  text-align: center;
-  color: palette.$neutral-variant--600;
+  color: palette.$neutral-variant--800;
 }
