--- a/packages/website/src/styles/index.scss
+++ b/packages/website/src/styles/index.scss
@@ -1,3 +1,3 @@
-$font-ui: "Fieldwork Geo", sans-serif;
-$font-headline: "Fieldwork Geo", sans-serif;
-$font-body: "Fieldwork Hum", sans-serif;
+$font-ui: "Fieldwork", sans-serif;
+$font-headline: "Fieldwork", sans-serif;
+$font-body: "Fieldwork", sans-serif;
