--- a/packages/website/src/components/AppHeader/AppHeader.module.scss
+++ b/packages/website/src/components/AppHeader/AppHeader.module.scss
@@ -27,21 +27,12 @@
 }
 
 .logo {
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
   margin: 0;
 }
 
 .logoIcon {
-  width: 1.5rem;
+  display: block;
   height: 1.5rem;
   margin: 0 -0.25rem;
   fill: palette.$primary--600;
-}
-
-.logoText {
-  font-size: 1.25rem;
-  font-weight: 600;
-  line-height: 1.5rem;
 }
