--- a/packages/website/src/components/PageLayout/PageLayout.module.scss
+++ b/packages/website/src/components/PageLayout/PageLayout.module.scss
@@ -11,6 +11,6 @@
   font-family: $font-headline;
   font-size: 2rem;
   font-weight: 700;
-  line-height: 2rem;
+  line-height: 1;
   color: palette.$neutral--900;
 }
