--- a/packages/website/src/components/AppHeader/AppHeader.module.scss
+++ b/packages/website/src/components/AppHeader/AppHeader.module.scss
@@ -30,9 +30,8 @@
   margin: 0;
 }
 
-.logoIcon {
+.logoTextIcon {
   display: block;
   height: 1.5rem;
-  margin: 0 -0.25rem;
   fill: palette.$primary--600;
 }
