--- a/packages/website/src/App.module.scss
+++ b/packages/website/src/App.module.scss
@@ -1,3 +1,9 @@
+.app {
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  min-height: 100vh;
+}
+
 .content {
-  min-height: calc(100vh - 8rem);
+  margin: -1rem 0;
 }
