--- a/packages/website/src/index.scss
+++ b/packages/website/src/index.scss
@@ -1,13 +1,11 @@
 @use "sass:color";
 
 @use "@neetly/palette";
-@use "./styles/index.scss" as *;
 
 html {
-  scroll-padding-top: 4rem;
-  font-family: $font-ui;
+  font-family: "Fieldwork", "Source Han Sans", sans-serif;
   font-size: 16px;
-  line-height: 1.5;
+  line-height: 1.4;
   overflow-wrap: break-word;
   color: palette.$neutral--800;
   background-color: palette.$neutral--10;
@@ -17,17 +15,6 @@ body {
   margin: 0;
 }
 
-:root {
-  :focus {
-    outline: none;
-  }
-
-  :focus-visible {
-    outline: 2px solid palette.$primary--600;
-    outline-offset: 2px;
-  }
-
-  ::selection {
-    background-color: color.change(palette.$secondary--200, $alpha: 0.72);
-  }
+::selection {
+  background-color: color.change(palette.$primary--300, $alpha: 0.5);
 }
