--- a/packages/website/src/components/PageLayout/PageLayout.module.scss
+++ b/packages/website/src/components/PageLayout/PageLayout.module.scss
@@ -1,5 +1,15 @@
+@use "@neetly/palette";
+
 .layout {
   max-width: 80rem;
   margin: 1rem auto;
   padding: 0 1rem;
+}
+
+.title {
+  margin: 1rem 0;
+  font-size: 2.5rem;
+  font-weight: 700;
+  line-height: 1;
+  color: palette.$neutral--900;
 }
