--- a/packages/website/src/components/AppHeader/AppHeader.module.scss
+++ b/packages/website/src/components/AppHeader/AppHeader.module.scss
@@ -23,7 +23,6 @@
   margin: 0 -0.5rem;
   padding: 0.5rem;
   border-radius: 0.5rem;
-  color: palette.$primary--600;
 
   .logoLink:focus-visible & {
     outline: 2px solid palette.$primary--600;
@@ -34,10 +33,10 @@
   width: 1.5rem;
   height: 1.5rem;
   margin: 0 -0.25rem;
-  fill: currentColor;
+  fill: palette.$primary--600;
 }
 
 .logoTextIcon {
   height: 1.5rem;
-  fill: currentColor;
+  fill: palette.$primary--600;
 }
