--- a/packages/website/src/components/ColorGroupList/ColorGroupItem.module.scss
+++ b/packages/website/src/components/ColorGroupList/ColorGroupItem.module.scss
@@ -1,4 +1,4 @@
-@use "@neetly/palette";
+@use "@neetly/ui";
 
 .item {
   display: grid;
@@ -7,8 +7,8 @@
 
 .name {
   margin: 0;
+  font-family: ui.$font-headline;
   font-size: 1.25rem;
   font-weight: 700;
   line-height: 1.2;
-  color: palette.$neutral--900;
 }
