--- a/packages/website/src/components/PageLayout/PageLayout.module.scss
+++ b/packages/website/src/components/PageLayout/PageLayout.module.scss
@@ -1,4 +1,4 @@
-@use "@neetly/palette";
+@use "@neetly/ui";
 
 .layout {
   max-width: 80rem;
@@ -8,8 +8,8 @@
 
 .title {
   margin: 1rem 0;
+  font-family: ui.$font-headline;
   font-size: 2.5rem;
   font-weight: 700;
   line-height: 1;
-  color: palette.$neutral--900;
 }
