--- a/packages/website/src/index.scss
+++ b/packages/website/src/index.scss
@@ -1,19 +1,9 @@
 @use "sass:color";
 
+@use "@neetly/ui";
 @use "@neetly/palette";
 
-html {
-  font-family: "Fieldwork", "Source Han Sans", sans-serif;
-  font-size: 16px;
-  line-height: 1.4;
-  overflow-wrap: break-word;
-  color: palette.$neutral--800;
-  background-color: palette.$neutral--10;
-}
-
-body {
-  margin: 0;
-}
+@include ui.preflight();
 
 ::selection {
   background-color: color.change(palette.$primary--300, $alpha: 0.5);
