Use Rustica as body font

--- a/packages/ui/src/styles/properties.scss
+++ b/packages/ui/src/styles/properties.scss
@@ -7,7 +7,7 @@
 
 $font-ui: _(font-ui, ("Fieldwork", "Source Han Sans", sans-serif));
 $font-headline: _(font-headline, ("Fieldwork", "Source Han Sans", sans-serif));
-$font-body: _(font-body, ("Fieldwork", "Source Han Sans", sans-serif));
+$font-body: _(font-body, ("Rustica", "Source Han Sans", sans-serif));
 
 $color-background: _(color-background, palette.$neutral--10);
 $color-on-background: _(color-on-background, palette.$neutral--900);
