--- a/packages/ui/src/styles/properties.scss
+++ b/packages/ui/src/styles/properties.scss
@@ -11,3 +11,5 @@ $font-body: _(font-body, ("Rustica", "Source Han Sans", sans-serif));
 
 $color-background: _(color-background, $neutral--10);
 $color-on-background: _(color-on-background, $neutral--900);
+
+$color-primary: _(color-primary, $primary--600);
