--- a/packages/website/src/components/NavigationList/NavigationItem.module.scss
+++ b/packages/website/src/components/NavigationList/NavigationItem.module.scss
@@ -1,6 +1,4 @@
-@use "sass:color";
-
-@use "@neetly/palette";
+@use "@neetly/ui";
 
 .link {
   all: unset;
@@ -16,7 +14,7 @@
   gap: 1rem;
   padding: 1.5rem;
   border-radius: 0.5rem;
-  background-color: color.change(palette.$primary--600, $alpha: 0.05);
+  background-color: ui.$color-primary-surface;
   transition: background-color 150ms;
 
   @media (max-width: 40rem) {
@@ -27,17 +25,17 @@
 
   @media (hover: hover) {
     .link:hover & {
-      background-color: color.change(palette.$primary--600, $alpha: 0.1);
+      background-color: ui.$color-primary-surface-accent;
     }
   }
 
   .link:active & {
-    background-color: color.change(palette.$primary--600, $alpha: 0.1);
+    background-color: ui.$color-primary-surface-accent;
   }
 
   .link:focus-visible & {
-    outline: 2px solid palette.$primary--600;
-    background-color: color.change(palette.$primary--600, $alpha: 0.1);
+    outline: 2px solid ui.$color-primary;
+    background-color: ui.$color-primary-surface-accent;
   }
 }
 
@@ -46,12 +44,12 @@
   font-size: 1.125rem;
   font-weight: 600;
   line-height: 1.2;
-  color: palette.$primary--600;
+  color: ui.$color-primary;
 }
 
 .linkIcon {
   width: 1.5rem;
   height: 1.5rem;
   margin: 0 -0.25rem;
-  fill: palette.$primary--600;
+  fill: ui.$color-primary;
 }
