--- a/packages/website/src/components/IconList/IconItem.module.scss
+++ b/packages/website/src/components/IconList/IconItem.module.scss
@@ -1,6 +1,4 @@
-@use "sass:color";
-
-@use "@neetly/palette";
+@use "@neetly/ui";
 
 .item {
   display: grid;
@@ -15,18 +13,18 @@
   width: 3rem;
   height: 3rem;
   border-radius: 0.5rem;
-  background-color: color.change(palette.$primary--600, $alpha: 0.05);
+  background-color: ui.$color-surface;
 }
 
 .icon {
   width: 1.5rem;
   height: 1.5rem;
-  fill: palette.$secondary--800;
+  fill: ui.$color-neutral-variant-accent;
 }
 
 .name {
   margin: 0;
   font-size: 1rem;
   font-weight: 600;
-  color: palette.$neutral-variant--800;
+  color: ui.$color-neutral-variant-accent;
 }
