--- a/packages/ui/src/styles/properties.scss
+++ b/packages/ui/src/styles/properties.scss
@@ -13,38 +13,48 @@ $font-headline: _(font-headline, ("Fieldwork", "Source Han Sans", sans-serif));
 $font-body: _(font-body, ("Rustica", "Source Han Sans", sans-serif));
 
 // Colors
-$color-background: _(color-background, $neutral--10);
-$color-on-background: _(color-on-background, $neutral--900);
+$color-background: _(color-background, $neutral--10, $neutral--900);
+$color-on-background: _(color-on-background, $neutral--900, $neutral--50);
 
-$color-surface: _(color-surface, color.change($primary--600, $alpha: 0.05));
+$color-surface: _(
+  color-surface,
+  color.change($primary--600, $alpha: 0.05),
+  color.change($primary--200, $alpha: 0.05)
+);
 $color-surface-accent: _(
   color-surface-accent,
-  color.change($primary--600, $alpha: 0.1)
+  color.change($primary--600, $alpha: 0.1),
+  color.change($primary--200, $alpha: 0.1)
 );
 
 // Colors - Primary
-$color-primary: _(color-primary, $primary--600);
-$color-primary-accent: _(color-primary-accent, $primary--800);
-$color-on-primary: _(color-on-primary, $primary--10);
-$color-primary-container: _(color-primary-container, $primary--100);
-$color-on-primary-container: _(color-on-primary-container, $primary--800);
+$color-primary: _(color-primary, $primary--600, $primary--200);
+$color-primary-accent: _(color-primary-accent, $primary--800, $primary--100);
+$color-on-primary: _(color-on-primary, $primary--10, $primary--800);
 
 $color-primary-surface: _(
   color-primary-surface,
-  color.change($primary--600, $alpha: 0.05)
+  color.change($primary--600, $alpha: 0.05),
+  color.change($primary--200, $alpha: 0.05)
 );
 $color-primary-surface-accent: _(
   color-primary-surface-accent,
-  color.change($primary--600, $alpha: 0.1)
+  color.change($primary--600, $alpha: 0.1),
+  color.change($primary--200, $alpha: 0.1)
 );
 
 // Colors - Neutral
-$color-neutral: _(color-neutral, $neutral--600);
-$color-neutral-accent: _(color-neutral-accent, $neutral--800);
+$color-neutral: _(color-neutral, $neutral--600, $neutral--200);
+$color-neutral-accent: _(color-neutral-accent, $neutral--800, $neutral--100);
 
 // Colors - Neutral Variant
-$color-neutral-variant: _(color-neutral-variant, $neutral-variant--600);
+$color-neutral-variant: _(
+  color-neutral-variant,
+  $neutral-variant--600,
+  $neutral-variant--200
+);
 $color-neutral-variant-accent: _(
   color-neutral-variant-accent,
-  $neutral-variant--800
+  $neutral-variant--800,
+  $neutral-variant--100
 );
