--- a/packages/website/src/components/ColorList/ColorItem.module.scss
+++ b/packages/website/src/components/ColorList/ColorItem.module.scss
@@ -1,7 +1,6 @@
 @use "sass:color";
 
 @use "@neetly/ui";
-@use "@neetly/palette";
 
 .item {
   display: grid;
@@ -22,6 +21,10 @@
   background-color: var(--color);
   box-shadow: inset 0 0 0 1px color.change(#000, $alpha: 0.1);
 
+  @media (prefers-color-scheme: dark) {
+    box-shadow: inset 0 0 0 1px color.change(#fff, $alpha: 0.1);
+  }
+
   .button:focus-visible & {
     outline: 2px solid ui.$color-primary;
     outline-offset: 2px;
@@ -32,8 +35,8 @@
   padding: 0.5rem 0.75rem;
   border-radius: 0.5rem;
   font-size: 0.875rem;
-  color: palette.$neutral--50;
-  background-color: palette.$neutral--800;
+  color: ui.$color-on-overlay;
+  background-color: ui.$color-overlay;
   opacity: 0;
   transition: opacity 150ms;
 
