--- a/packages/website/src/components/IconList/IconItem.module.scss
+++ b/packages/website/src/components/IconList/IconItem.module.scss
@@ -13,7 +13,7 @@
   width: 3rem;
   height: 3rem;
   border-radius: 0.5rem;
-  background-color: ui.$color-surface;
+  background-color: ui.$color-overlay-01;
 }
 
 .icon {
