--- a/packages/ui/src/styles/properties.scss
+++ b/packages/ui/src/styles/properties.scss
@@ -3,108 +3,149 @@
 @use "@neetly/theme" as *;
 @use "@neetly/palette" as *;
 
-@function _($name, $value, $dark-mode-value: null) {
-  @return define-property($name, $value, $dark-mode-value);
-}
-
 // Fonts
-$font-ui: _(font-ui, ("Fieldwork", "Source Han Sans", sans-serif));
-$font-headline: _(font-headline, ("Fieldwork", "Source Han Sans", sans-serif));
-$font-body: _(font-body, ("Rustica", "Source Han Sans", sans-serif));
+$font-ui: define-property(
+  font-ui,
+  ("Fieldwork", "Source Han Sans", sans-serif)
+);
+$font-headline: define-property(
+  font-headline,
+  ("Fieldwork", "Source Han Sans", sans-serif)
+);
+$font-body: define-property(
+  font-body,
+  ("Rustica", "Source Han Sans", sans-serif)
+);
 
 // Colors
-$color-background: _(color-background, $neutral--10, $neutral--900);
-$color-on-background: _(color-on-background, $neutral--900, $neutral--100);
+$color-background: define-property(
+  color-background,
+  $neutral--10,
+  $neutral--900
+);
+$color-on-background: define-property(
+  color-on-background,
+  $neutral--900,
+  $neutral--100
+);
 
-$color-surface: _(
-  color-surface,
+$color-overlay-01: define-property(
+  color-overlay-01,
   color.change($primary--600, $alpha: 0.05),
   color.change($primary--300, $alpha: 0.05)
 );
-$color-surface-accent: _(
-  color-surface-accent,
+$color-overlay-02: define-property(
+  color-overlay-02,
   color.change($primary--600, $alpha: 0.1),
   color.change($primary--300, $alpha: 0.1)
 );
 
-$color-selection: _(
+$color-selection: define-property(
   color-selection,
   color.change($primary--300, $alpha: 0.5),
   color.change($primary--600, $alpha: 0.5)
 );
 
 // Colors - Primary
-$color-primary: _(color-primary, $primary--600, $primary--300);
-$color-primary-accent: _(color-primary-accent, $primary--700, $primary--200);
-$color-on-primary: _(color-on-primary, $primary--10, $primary--800);
+$color-primary: define-property(color-primary, $primary--600, $primary--300);
+$color-primary-accent: define-property(
+  color-primary-accent,
+  $primary--800,
+  $primary--100
+);
+$color-on-primary: define-property(
+  color-on-primary,
+  $primary--10,
+  $primary--800
+);
 
-$color-primary-surface: _(
-  color-primary-surface,
+$color-primary-overlay-01: define-property(
+  color-primary-overlay-01,
   color.change($primary--600, $alpha: 0.05),
   color.change($primary--300, $alpha: 0.05)
 );
-$color-primary-surface-accent: _(
-  color-primary-surface-accent,
+$color-primary-overlay-02: define-property(
+  color-primary-overlay-02,
   color.change($primary--600, $alpha: 0.1),
   color.change($primary--300, $alpha: 0.1)
 );
 
 // Colors - Secondary
-$color-secondary: _(color-secondary, $secondary--600, $secondary--300);
-$color-secondary-accent: _(
-  color-secondary-accent,
-  $secondary--700,
-  $secondary--200
+$color-secondary: define-property(
+  color-secondary,
+  $secondary--600,
+  $secondary--300
 );
-$color-on-secondary: _(color-on-secondary, $secondary--10, $secondary--800);
+$color-secondary-accent: define-property(
+  color-secondary-accent,
+  $secondary--800,
+  $secondary--100
+);
+$color-on-secondary: define-property(
+  color-on-secondary,
+  $secondary--10,
+  $secondary--800
+);
 
-$color-secondary-surface: _(
-  color-secondary-surface,
+$color-secondary-overlay-01: define-property(
+  color-secondary-overlay-01,
   color.change($secondary--600, $alpha: 0.05),
   color.change($secondary--300, $alpha: 0.05)
 );
-$color-secondary-surface-accent: _(
-  color-secondary-surface-accent,
+$color-secondary-overlay-02: define-property(
+  color-secondary-overlay-02,
   color.change($secondary--600, $alpha: 0.1),
   color.change($secondary--300, $alpha: 0.1)
 );
 
 // Colors - Tertiary
-$color-tertiary: _(color-tertiary, $tertiary--600, $tertiary--300);
-$color-tertiary-accent: _(
-  color-tertiary-accent,
-  $tertiary--700,
-  $tertiary--200
+$color-tertiary: define-property(
+  color-tertiary,
+  $tertiary--600,
+  $tertiary--300
 );
-$color-on-tertiary: _(color-on-tertiary, $tertiary--10, $tertiary--800);
+$color-tertiary-accent: define-property(
+  color-tertiary-accent,
+  $tertiary--800,
+  $tertiary--100
+);
+$color-on-tertiary: define-property(
+  color-on-tertiary,
+  $tertiary--10,
+  $tertiary--800
+);
 
-$color-tertiary-surface: _(
-  color-tertiary-surface,
+$color-tertiary-overlay-01: define-property(
+  color-tertiary-overlay-01,
   color.change($tertiary--600, $alpha: 0.05),
   color.change($tertiary--300, $alpha: 0.05)
 );
-$color-tertiary-surface-accent: _(
-  color-tertiary-surface-accent,
+$color-tertiary-overlay-02: define-property(
+  color-tertiary-overlay-02,
   color.change($tertiary--600, $alpha: 0.1),
   color.change($tertiary--300, $alpha: 0.1)
 );
 
 // Colors - Neutral
-$color-neutral: _(color-neutral, $neutral--600, $neutral--300);
-$color-neutral-accent: _(color-neutral-accent, $neutral--800, $neutral--100);
+$color-neutral: define-property(color-neutral, $neutral--600, $neutral--300);
+$color-neutral-accent: define-property(
+  color-neutral-accent,
+  $neutral--800,
+  $neutral--100
+);
 
 // Colors - Neutral Variant
-$color-neutral-variant: _(
+$color-neutral-variant: define-property(
   color-neutral-variant,
   $neutral-variant--600,
   $neutral-variant--300
 );
-$color-neutral-variant-accent: _(
+$color-neutral-variant-accent: define-property(
   color-neutral-variant-accent,
   $neutral-variant--800,
   $neutral-variant--100
 );
 
-// Colors - Overlay
-$color-overlay: _(color-overlay, $neutral--800);
-$color-on-overlay: _(color-on-overlay, $neutral--50);
+// Colors - Tooltip
+$color-tooltip: define-property(color-tooltip, $neutral--800);
+$color-on-tooltip: define-property(color-on-tooltip, $neutral--50);
