--- a/packages/ui/src/components/Button/Button.module.scss
+++ b/packages/ui/src/components/Button/Button.module.scss
@@ -12,7 +12,7 @@
 
   @include ui.active {
     transform: scale(0.95);
-    transition: background-color 150ms;
+    transition: none;
   }
 
   &:disabled {
