--- a/packages/ui/src/styles/preflight.scss
+++ b/packages/ui/src/styles/preflight.scss
@@ -14,6 +14,7 @@
     overflow-wrap: break-word;
     color: $color-on-background;
     background-color: $color-background;
+    -webkit-tap-highlight-color: transparent;
   }
 
   body {
