--- a/packages/ui/src/components/Button/Button.module.scss
+++ b/packages/ui/src/components/Button/Button.module.scss
@@ -3,6 +3,7 @@
 .button {
   all: unset;
   position: relative;
+  display: inline-block;
   padding: 0.5rem 1rem;
   border-radius: 0.5rem;
   font-weight: 600;
