--- a/packages/ui/src/components/Spinner/Spinner.module.scss
+++ b/packages/ui/src/components/Spinner/Spinner.module.scss
@@ -1,5 +1,11 @@
 @use "@neetly/ui";
 
+.spinner {
+  display: inline-block;
+  width: 3rem;
+  height: 3rem;
+}
+
 .icon {
   width: 3rem;
   height: 3rem;
