Add placeholder style

--- a/packages/ui/src/components/TextField/TextField.module.scss
+++ b/packages/ui/src/components/TextField/TextField.module.scss
@@ -9,6 +9,10 @@
   background-color: ui.$color-overlay-01;
   transition: background-color 150ms;
 
+  &::placeholder {
+    color: ui.$color-neutral-variant-dim;
+  }
+
   @include ui.hover {
     background-color: ui.$color-overlay-02;
   }
