--- a/packages/ui/src/styles/interactions.scss
+++ b/packages/ui/src/styles/interactions.scss
@@ -1,17 +1,17 @@
 @mixin hover {
   @media (hover: hover) {
-    &:hover {
+    &:not(:disabled):hover {
       @content;
     }
   }
 
-  &:active {
+  &:not(:disabled):active {
     @content;
   }
 }
 
 @mixin active {
-  &:active {
+  &:not(:disabled):active {
     @content;
   }
 }
