--- a/packages/ui/src/components/TextField/TextField.module.scss
+++ b/packages/ui/src/components/TextField/TextField.module.scss
@@ -6,6 +6,7 @@
   padding: 0.5rem 1rem;
   border-radius: 0.5rem;
   user-select: auto;
+  caret-color: ui.$color-primary;
   background-color: ui.$color-overlay-01;
   transition: background-color 150ms;
 
