--- a/packages/ui/src/styles/interactions.scss
+++ b/packages/ui/src/styles/interactions.scss
@@ -28,9 +28,9 @@
   }
 }
 
-@mixin focus-ring($color, $offset: 2px) {
+@mixin focus-ring($color) {
   @include focus-visible {
     outline: 2px solid $color;
-    outline-offset: $offset;
+    outline-offset: 2px;
   }
 }
