--- a/packages/ui/src/components/TextField/TextField.module.scss
+++ b/packages/ui/src/components/TextField/TextField.module.scss
@@ -1,11 +1,38 @@
 @use "@neetly/ui";
 
+.textFieldWrapper {
+  position: relative;
+  display: inline-block;
+
+  &::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: -4px;
+    border-radius: calc(0.5rem + 4px);
+    box-shadow: inset 0 0 0 2px ui.$color-primary;
+    pointer-events: none;
+    transition: visibility 150ms, opacity 150ms;
+  }
+
+  &:not(:focus-within)::after {
+    visibility: hidden;
+    opacity: 0;
+  }
+}
+
 .textField {
   all: unset;
-  display: inline-block;
+  display: block;
+  box-sizing: border-box;
+  width: 100%;
   padding: 0.5rem 1rem;
   border-radius: 0.5rem;
   user-select: auto;
+  cursor: text;
   caret-color: ui.$color-primary;
   background-color: ui.$color-overlay-01;
   transition: background-color 150ms;
@@ -18,13 +45,12 @@
     background-color: ui.$color-overlay-02;
   }
 
-  @include ui.focus {
-    outline: 2px solid ui.$color-primary;
-    outline-offset: 2px;
+  &:focus {
     background-color: ui.$color-overlay-02;
   }
 
   &:disabled {
     opacity: 0.5;
+    cursor: default;
   }
 }
