--- a/packages/ui/src/index.scss
+++ b/packages/ui/src/index.scss
@@ -1,3 +1,4 @@
 @forward "./styles/preflight.scss";
 @forward "./styles/properties.scss";
 @forward "./styles/interactions.scss";
+@forward "./styles/typography.scss";
