--- a/packages/ui/src/styles/preflight.scss
+++ b/packages/ui/src/styles/preflight.scss
@@ -10,7 +10,7 @@
   html {
     font-family: $font-ui;
     font-size: 16px;
-    line-height: 1.4;
+    line-height: $line-height-ui;
     overflow-wrap: break-word;
     color: $color-on-background;
     background-color: $color-background;
