--- a/packages/ui/src/styles/properties.scss
+++ b/packages/ui/src/styles/properties.scss
@@ -17,6 +17,10 @@ $font-body: define-property(
   ("Rustica", "Source Han Sans", sans-serif)
 );
 
+$line-height-ui: define-property(line-height-ui, 1.4);
+$line-height-headline: define-property(line-height-headline, 1.2);
+$line-height-body: define-property(line-height-body, 1.4);
+
 // Colors
 $color-background: define-property(
   color-background,
