--- a/packages/ui/src/components/Button/Button.module.scss
+++ b/packages/ui/src/components/Button/Button.module.scss
@@ -60,6 +60,7 @@
     top: 0;
     bottom: 0;
     border-radius: inherit;
+    pointer-events: none;
     transition: background-color 150ms;
   }
 
