--- a/packages/ui/src/components/TextField/TextField.module.scss
+++ b/packages/ui/src/components/TextField/TextField.module.scss
@@ -2,6 +2,7 @@
 
 .container {
   display: inline-grid;
+  grid-template-rows: auto 1fr;
   user-select: none;
 
   &[data-disabled] {
@@ -23,15 +24,11 @@
 
 .textFieldWrapper {
   position: relative;
-  display: inline-block;
+  display: grid;
 
   &::before {
     content: "";
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
+    grid-area: 1 / 1;
     margin: -4px;
     border-radius: calc(0.5rem + 4px);
     box-shadow: inset 0 0 0 2px ui.$color-primary;
@@ -48,9 +45,7 @@
   all: unset;
 
   position: relative;
-  display: block;
-  box-sizing: border-box;
-  width: 100%;
+  grid-area: 1 / 1;
   padding: 0.5rem 1rem;
   border-radius: 0.5rem;
 
