--- a/packages/ui/src/components/Button/Button.module.scss
+++ b/packages/ui/src/components/Button/Button.module.scss
@@ -141,9 +141,21 @@
   @include ui.focus-ring(ui.$color-tertiary);
 }
 
-.content {
+.container {
   position: relative;
+  display: grid;
+  grid-auto-flow: column;
+  align-items: center;
+  gap: 0.5rem;
   grid-area: 1 / 1;
   padding: 0.5rem 1rem;
   border-radius: inherit;
+}
+
+.iconBefore,
+.iconAfter {
+  width: 1.5rem;
+  height: 1.5rem;
+  margin: -0.25rem;
+  fill: currentColor;
 }
