Use Source Sans 3

--- a/packages/ui/src/styles/properties.scss
+++ b/packages/ui/src/styles/properties.scss
@@ -6,15 +6,15 @@
 // Fonts
 $font-ui: define-property(
   font-ui,
-  ("Fieldwork", "Source Han Sans", sans-serif)
+  ("Source Sans 3", "Source Han Sans", sans-serif)
 );
 $font-headline: define-property(
   font-headline,
-  ("Fieldwork", "Source Han Sans", sans-serif)
+  ("Source Sans 3", "Source Han Sans", sans-serif)
 );
 $font-body: define-property(
   font-body,
-  ("Rustica", "Source Han Sans", sans-serif)
+  ("Source Sans 3", "Source Han Sans", sans-serif)
 );
 
 $line-height-ui: define-property(line-height-ui, 1.4);
