--- a/packages/ui/src/components/Button/Button.module.scss
+++ b/packages/ui/src/components/Button/Button.module.scss
@@ -146,7 +146,7 @@
   display: grid;
   grid-auto-flow: column;
   align-items: center;
-  gap: 0.5rem;
+  gap: 0.75rem;
   grid-area: 1 / 1;
   padding: 0.5rem 1rem;
   border-radius: inherit;
@@ -156,6 +156,6 @@
 .iconAfter {
   width: 1.5rem;
   height: 1.5rem;
-  margin: -0.25rem;
+  margin: -0.75rem -0.5rem;
   fill: currentColor;
 }
