--- a/packages/ui/src/styles/preflight.scss
+++ b/packages/ui/src/styles/preflight.scss
@@ -1,6 +1,7 @@
 @use "@neetly/theme" as *;
 
 @use "./properties.scss" as *;
+@use "./typography.scss" as *;
 
 @mixin preflight($properties: (), $dark-mode-properties: ()) {
   :root {
@@ -8,9 +9,8 @@
   }
 
   html {
-    font-family: $font-ui;
-    font-size: 16px;
-    line-height: $line-height-ui;
+    @include typography-ui(100%);
+
     overflow-wrap: break-word;
     color: $color-on-background;
     background-color: $color-background;
