--- a/packages/ui/src/styles/properties.scss
+++ b/packages/ui/src/styles/properties.scss
@@ -17,6 +17,11 @@ $font-body: define-property(
   ("Source Sans 3", "Source Han Sans", sans-serif)
 );
 
+$font-weight-regular: define-property(font-weight-regular, 400);
+$font-weight-medium: define-property(font-weight-medium, 500);
+$font-weight-semibold: define-property(font-weight-semibold, 600);
+$font-weight-bold: define-property(font-weight-bold, 700);
+
 $line-height-ui: define-property(line-height-ui, 1.4);
 $line-height-headline: define-property(line-height-headline, 1.2);
 $line-height-body: define-property(line-height-body, 1.4);
